tests/errors/def_func_05.py
from lpython import i32
def func_05(x : i32 ,y : i32,z : i32) -> i32 :
    print(x,y,z)

func_05(1,2)